# Omniplanner

./: .gitignore  Cargo.toml  README.md  build_android.ps1  build_web.ps1  clippy.toml  datos_deudas.csv  hoy
.github/workflows/: ci.yml
android/: gradlew  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/omniplanner/app/: MainActivity.kt  OmniApp.kt  OmniBridge.kt
android/app/src/main/java/com/omniplanner/app/screens/: AgendaScreen.kt  ContrasScreen.kt  DashboardScreen.kt  MemoriaScreen.kt  PresupuestoScreen.kt  TareasScreen.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/values/: strings.xml  themes.xml
examples/: sim_test.rs
exports/: pagos_2026-05.csv
src/: contrasenias.rs  cripto.rs  dinero.rs  ffi.rs  lib.rs  main.rs  memoria.rs  seguridad.rs  storage.rs  wasm.rs
src/agenda/: mod.rs
src/canvas/: mod.rs
src/casos/: mod.rs
src/cli/: io_modulos.rs  mod.rs  rastreador.rs
src/cobranzas/: mod.rs
src/diagrams/: mod.rs
src/eventos/: mod.rs
src/io/: excel.rs  mod.rs  parser.rs
src/mapper/: mod.rs
src/ml/: advisor.rs  ann.rs  balance_general.rs  cnn.rs  conciliacion_bancaria.rs  decision_tree.rs  dnn.rs  estado_resultados.rs  gastos.rs  linalg.rs  mod.rs  optimizer.rs  presupuesto_cero.rs  random_forest.rs  reinforcement.rs  rnn.rs  sugerencias.rs  svm.rs
src/nlp/: asistente.rs  conversation.rs  engine.rs  feedback.rs  feriados.rs  intent.rs  knowledge.rs  mod.rs  router.rs  sentiment.rs  tokenizer.rs
src/obras/: mod.rs
src/propuestas/: mod.rs
src/proveedores/: mod.rs
src/sync/: calendario.rs  correo.rs  drive.rs  gist.rs  mod.rs  outlook.rs  servidor.rs
src/tasks/: mod.rs
src/vcs/: mod.rs  repo.rs
tests/: advisor_rules.rs
tools/: excel_a_csv.py  fix_menu.py  preview_csv.py  read_excel.py
web/: README.md  index.html
