[package]
name = "omniplanner"
version = "0.1.0"
edition = "2021"
description = "Suite todo-en-uno: tareas, agenda, escritura a mano, diagramas, source control, mapeo y codificación"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
colored = "2"
sha2 = "0.10"
dialoguer = "0.11"
console = "0.15"
ureq = { version = "2", features = ["json"] }
lettre = "0.11"
open = "5"
